# vox

./: Cargo.toml
vox-api-gateway/: Cargo.toml
vox-api-gateway/src/: main.rs
vox-api-gateway/src/api/: mod.rs  requests.rs  responses.rs
vox-cli/: Cargo.toml
vox-cli/src/: main.rs
vox-gpt-service/: Cargo.toml
vox-gpt-service/src/: main.rs
vox-gpt-service/src/api/: mod.rs  requests.rs  responses.rs
vox-stt-service/: Cargo.toml
vox-tts/: Cargo.toml
vox-tts-service/: Cargo.toml
vox-tts-service/src/: main.rs
vox-tts-service/src/api/: mod.rs  requests.rs  responses.rs
vox-tts/src/: lib.rs
