[package]
name = "vox-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vox-tts = { version = "0.1", path = "../vox-tts"}
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.6" }
async-stream = { version = "0.3.2" }
futures-core = { version = "0.3.15" }
kira = "0.7.1"
