[package]
name = "vox-tts-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vox-tts = { version = "0.1", path = "../vox-tts"}
actix-web = "4.3.0"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
log = "0.4"
env_logger = "0.10.0"
futures-util = "0.3.26"
actix-cors = "0.6.4"
base64 = "0.21.0"
